5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1667_2973.log
== TEST (2019-04-16 16:14:04) 
-- CODE:
so=int(input("posicao inicial do objeto:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
s=(so+(v*t))
print(s)
-- OUTPUT:
7202
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:15:01) 
-- CODE:
so=int(input("posicao inicial do objeto:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
if(v>=100):
	print("OK")
else:
	print("ACIMA")
s=(so+(v*t))
print(s)
-- OUTPUT:
ACIMA
7202
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:15:30) 
-- CODE:
so=int(input("posicao inicial do objeto:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
if(v>=100):
	print("OK")
else:
print("ACIMA")
s=(so+(v*t))
print(s)
-- ERROR:
File "XXXX", line 7
    print("ACIMA")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:15:54) 
-- CODE:
so=int(input("posicao inicial do objeto:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
if(v>=100):
	print("ACIMA")
else:
	print("OK")
s=(so+(v*t))
print(s)
-- OUTPUT:
OK
7202
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:16:05) 
-- CODE:
so=int(input("posicao inicial do objeto:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
if(v>=100):
	print("ACIMA")
else:
	print("OK")
s=(so+(v*t))
print(s)
-- EXECUTION TIME:
0.195154
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
OK
7202
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
OK
4470
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
ACIMA
7203
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:16:46) 
-- CODE:
so=int(input("posicao inicial do objeto:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
s=(so=(v*t)
if(v>=100):
	print("ACIMA")
else:
	print("OK")
s=(so+(v*t))
print(s)
-- ERROR:
File "XXXX", line 4
    s=(so=(v*t)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:16:50) 
-- CODE:
so=int(input("posicao inicial do objeto:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
s=(so=(v*t)
if(v>=100):
	print("ACIMA")
else:
	print("OK")

-- ERROR:
File "XXXX", line 4
    s=(so=(v*t)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:06) 
-- CODE:
so=int(input("posicao inicial do objeto:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
s=(so+(v*t))
if(v>=100):
	print("ACIMA")
else:
	print("OK")

-- OUTPUT:
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:49) 
-- CODE:
so=int(input("posicao inicial do objeto:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
s=(so+(v*t))
if(v>=100):
	mensagem="ACIMA"
else:
	mensagem="OK"
print(mensagem)

-- OUTPUT:
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:18:04) 
-- CODE:
so=int(input("posicao inicial do objeto:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
s=(so+(v*t))
print(s)
if(v>=100):
	mensagem="ACIMA"
else:
	mensagem="OK"
print(mensagem)

-- OUTPUT:
7202
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:18:10) 
-- CODE:
so=int(input("posicao inicial do objeto:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
s=(so+(v*t))
print(s)
if(v>=100):
	mensagem="ACIMA"
else:
	mensagem="OK"
print(mensagem)

-- EXECUTION TIME:
0.213946
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
